tests/snapshots/snapshot_fixtures__fixtures__mem_bcopy_overlap.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/mem_bcopy_overlap.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : s8i[8] = [1, 2, 3, 4, 5, 6, 7, 8] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d " [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[8], "buf", align 1
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.buf : s8i[8]*
    copy %1, %3
    %4 = cast(array_to_ptrdecay) %1 : s8i*
    %5 = cast(bitcast) %4 : void*
    %6 = cast(array_to_ptrdecay) %1 : s8i*
    %7 = const 2 : s32i
    %8 = ptr_stride %6, %7 : s8i*
    %9 = cast(bitcast) %8 : void*
    %10 = const 4 : u64i
    <unmodeled: cir.libc.memmove>
    scope {
        %17 = alloca s32i, "i", align 4
        %18 = const 0 : s32i
        store %18, %17, align 4
        for cond: {
            %30 = load %17 : s32i, align 4
            %31 = const 8 : s32i
            %32 = cmp lt %30, %31 : bool
            condition %32
        } step: {
            %19 = load %17 : s32i, align 4
            %20 = inc %19 : s32i [nsw]
            store %20, %17, align 4
            yield
        } do {
            %21 = get_global @printf : ((s8i*, ...) -> s32i)*
            %22 = get_global @.str : s8i[4]*
            %23 = cast(array_to_ptrdecay) %22 : s8i*
            %24 = load %17 : s32i, align 4
            %25 = cast(integral) %24 : s64i
            %26 = get_element %1[%25] : s8i*
            %27 = load %26 : s8i, align 1
            %28 = cast(integral) %27 : s32i
            %29 = call @printf(%23, %28) : s32i [all]
            yield
        }
        yield
    }
    %11 = get_global @printf : ((s8i*, ...) -> s32i)*
    %12 = get_global @.str.1 : s8i[2]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = call @printf(%13) : s32i [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
