tests/snapshots/snapshot_fixtures__fixtures__mem_bzero.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/mem_bzero.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[5] = [1, 2, 3, 4, 5] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[5], "a", align 16
    %2 = alloca s32i, "sum", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @__const.main.a : s32i[5]*
    copy %1, %4
    %5 = cast(array_to_ptrdecay) %1 : s32i*
    %6 = cast(bitcast) %5 : void*
    %7 = const 20 : u64i
    %8 = const 0 : u8i
    <unmodeled: cir.libc.memset>
    %9 = const 0 : s32i
    store %9, %2, align 4
    scope {
        %17 = alloca s32i, "i", align 4
        %18 = const 0 : s32i
        store %18, %17, align 4
        for cond: {
            %27 = load %17 : s32i, align 4
            %28 = const 5 : s32i
            %29 = cmp lt %27, %28 : bool
            condition %29
        } step: {
            %19 = load %17 : s32i, align 4
            %20 = inc %19 : s32i [nsw]
            store %20, %17, align 4
            yield
        } do {
            %21 = load %17 : s32i, align 4
            %22 = cast(integral) %21 : s64i
            %23 = get_element %1[%22] : s32i*
            %24 = load %23 : s32i, align 4
            %25 = load %2 : s32i, align 4
            %26 = add %25, %24 : s32i [nsw]
            store %26, %2, align 4
            yield
        }
        yield
    }
    %10 = get_global @printf : ((s8i*, ...) -> s32i)*
    %11 = get_global @.str : s8i[4]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = load %2 : s32i, align 4
    %14 = call @printf(%12, %13) : s32i [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
