tests/snapshots/snapshot_fixtures__fixtures__mem_memchr.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/mem_memchr.c" (c, x86_64-unknown-linux-gnu)
global __const.main.word : s8i[4] = "abc" [cir_private, default, dso_local, constant]
global __const.main.cbuf : u8i[4] = [9, 8, 7, 6] [cir_private, default, dso_local, constant]
global __const.main.buf : u8i[8] = [10, 20, 30, 40, 50, 60, 70, 80] [cir_private, default, dso_local, constant]
global .str : s8i[33] = "%ld %d %d %ld %d %d %ld %ld %ld\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[8], "buf", align 1
    %2 = alloca u8i[4], "cbuf", align 1
    %3 = alloca s8i[4], "word", align 1
    %4 = alloca s32i, "needle", align 4
    %5 = alloca u64i, "partial_count", align 8
    %6 = alloca u8i*, "hit", align 8
    %7 = alloca u8i*, "miss", align 8
    %8 = alloca u8i*, "zero", align 8
    %9 = alloca s8i*, "nul_after", align 8
    %10 = alloca s8i*, "nul_equal", align 8
    %11 = alloca s8i*, "nul_before", align 8
    %12 = alloca u8i*, "partial", align 8
    %13 = alloca u8i*, "offset_base", align 8
    %14 = alloca u8i*, "offset", align 8
    %15 = alloca u8i*, "const_hit", align 8
    %16 = const 0 : s32i
    store %16, %0
    %17 = get_global @__const.main.buf : u8i[8]*
    copy %1, %17
    %18 = get_global @__const.main.cbuf : u8i[4]*
    copy %2, %18
    %19 = get_global @__const.main.word : s8i[4]*
    copy %3, %19
    %20 = const 3 : s64i
    %21 = get_element %1[%20] : u8i*
    %22 = load %21 : u8i, align 1
    %23 = cast(integral) %22 : s32i
    store %23, %4, align 4
    %24 = const 4 : u64i
    store %24, %5, align 8, volatile
    %25 = cast(array_to_ptrdecay) %1 : u8i*
    %26 = cast(bitcast) %25 : void*
    %27 = load %4 : s32i, align 4
    %28 = const 8 : u64i
    %29 = libc.memchr(%26, %27, %28) : void*
    %30 = cast(bitcast) %29 : u8i*
    store %30, %6, align 8
    %31 = cast(array_to_ptrdecay) %1 : u8i*
    %32 = cast(bitcast) %31 : void*
    %33 = const 99 : s32i
    %34 = const 8 : u64i
    %35 = libc.memchr(%32, %33, %34) : void*
    %36 = cast(bitcast) %35 : u8i*
    store %36, %7, align 8
    %37 = cast(array_to_ptrdecay) %1 : u8i*
    %38 = cast(bitcast) %37 : void*
    %39 = const 10 : s32i
    %40 = const 0 : u64i
    %41 = libc.memchr(%38, %39, %40) : void*
    %42 = cast(bitcast) %41 : u8i*
    store %42, %8, align 8
    %43 = cast(array_to_ptrdecay) %3 : s8i*
    %44 = cast(bitcast) %43 : void*
    %45 = const 0 : s32i
    %46 = const 4 : u64i
    %47 = libc.memchr(%44, %45, %46) : void*
    %48 = cast(bitcast) %47 : s8i*
    store %48, %9, align 8
    %49 = cast(array_to_ptrdecay) %3 : s8i*
    %50 = cast(bitcast) %49 : void*
    %51 = const 0 : s32i
    %52 = const 3 : u64i
    %53 = libc.memchr(%50, %51, %52) : void*
    %54 = cast(bitcast) %53 : s8i*
    store %54, %10, align 8
    %55 = cast(array_to_ptrdecay) %3 : s8i*
    %56 = cast(bitcast) %55 : void*
    %57 = const 0 : s32i
    %58 = const 2 : u64i
    %59 = libc.memchr(%56, %57, %58) : void*
    %60 = cast(bitcast) %59 : s8i*
    store %60, %11, align 8
    %61 = cast(array_to_ptrdecay) %1 : u8i*
    %62 = cast(bitcast) %61 : void*
    %63 = load %4 : s32i, align 4
    %64 = load %5 : u64i, align 8, volatile
    %65 = libc.memchr(%62, %63, %64) : void*
    %66 = cast(bitcast) %65 : u8i*
    store %66, %12, align 8
    %67 = cast(array_to_ptrdecay) %1 : u8i*
    %68 = const 2 : s32i
    %69 = ptr_stride %67, %68 : u8i*
    store %69, %13, align 8
    %70 = load %13 : u8i*, align 8
    %71 = cast(bitcast) %70 : void*
    %72 = load %4 : s32i, align 4
    %73 = const 2 : u64i
    %74 = libc.memchr(%71, %72, %73) : void*
    %75 = cast(bitcast) %74 : u8i*
    store %75, %14, align 8
    %76 = cast(array_to_ptrdecay) %2 : u8i*
    %77 = cast(bitcast) %76 : void*
    %78 = const 7 : s32i
    %79 = const 4 : u64i
    %80 = libc.memchr(%77, %78, %79) : void*
    %81 = cast(bitcast) %80 : u8i*
    store %81, %15, align 8
    %82 = get_global @printf : ((s8i*, ...) -> s32i)*
    %83 = get_global @.str : s8i[33]*
    %84 = cast(array_to_ptrdecay) %83 : s8i*
    %85 = load %6 : u8i*, align 8
    %86 = cast(array_to_ptrdecay) %1 : u8i*
    %87 = ptr_diff %85, %86 : s64i
    %88 = load %7 : u8i*, align 8
    %89 = const #cir.ptr<null> : u8i*
    %90 = cmp eq %88, %89 : bool
    %91 = cast(bool_to_int) %90 : s32i
    %92 = load %8 : u8i*, align 8
    %93 = const #cir.ptr<null> : u8i*
    %94 = cmp eq %92, %93 : bool
    %95 = cast(bool_to_int) %94 : s32i
    %96 = load %9 : s8i*, align 8
    %97 = cast(array_to_ptrdecay) %3 : s8i*
    %98 = ptr_diff %96, %97 : s64i
    %99 = load %10 : s8i*, align 8
    %100 = const #cir.ptr<null> : s8i*
    %101 = cmp eq %99, %100 : bool
    %102 = cast(bool_to_int) %101 : s32i
    %103 = load %11 : s8i*, align 8
    %104 = const #cir.ptr<null> : s8i*
    %105 = cmp eq %103, %104 : bool
    %106 = cast(bool_to_int) %105 : s32i
    %107 = load %12 : u8i*, align 8
    %108 = cast(array_to_ptrdecay) %1 : u8i*
    %109 = ptr_diff %107, %108 : s64i
    %110 = load %14 : u8i*, align 8
    %111 = load %13 : u8i*, align 8
    %112 = ptr_diff %110, %111 : s64i
    %113 = load %15 : u8i*, align 8
    %114 = cast(array_to_ptrdecay) %2 : u8i*
    %115 = ptr_diff %113, %114 : s64i
    %116 = call @printf(%84, %87, %91, %95, %98, %102, %106, %109, %112, %115) : s32i [all]
    %117 = const 0 : s32i
    store %117, %0
    %118 = load %0 : s32i
    return %118
}
