tests/snapshots/snapshot_fixtures__fixtures__memchr_nullable_pointer.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/memchr_nullable_pointer.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : u8i[4] = [10, 20, 30, 40] [cir_private, default, dso_local, constant]
global .str : s8i[8] = "%ld %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[4], "buf", align 1
    %2 = alloca u8i*, "hit", align 8
    %3 = alloca u8i*, "miss", align 8
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @__const.main.buf : u8i[4]*
    copy %1, %5
    %6 = cast(array_to_ptrdecay) %1 : u8i*
    %7 = cast(bitcast) %6 : void*
    %8 = const 30 : s32i
    %9 = const 4 : u64i
    <unmodeled: cir.libc.memchr>
    %11 = cast(bitcast) %10 : u8i*
    store %11, %2, align 8
    %12 = cast(array_to_ptrdecay) %1 : u8i*
    %13 = cast(bitcast) %12 : void*
    %14 = const 99 : s32i
    %15 = const 4 : u64i
    <unmodeled: cir.libc.memchr>
    %17 = cast(bitcast) %16 : u8i*
    store %17, %3, align 8
    %18 = get_global @printf : ((s8i*, ...) -> s32i)*
    %19 = get_global @.str : s8i[8]*
    %20 = cast(array_to_ptrdecay) %19 : s8i*
    %21 = load %2 : u8i*, align 8
    %22 = cast(array_to_ptrdecay) %1 : u8i*
    %23 = ptr_diff %21, %22 : s64i
    %24 = load %3 : u8i*, align 8
    %25 = const #cir.ptr<null> : u8i*
    %26 = cmp eq %24, %25 : bool
    %27 = cast(bool_to_int) %26 : s32i
    %28 = call @printf(%20, %23, %27) : s32i [all]
    %29 = const 0 : s32i
    store %29, %0
    %30 = load %0 : s32i
    return %30
}
