tests/snapshots/snapshot_fixtures__fixtures__memcmp.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/memcmp.c" (c, x86_64-unknown-linux-gnu)
global __const.main.dyn_b : u8i[8] = [1, 2, 3, 4, 5, 6, 7, 8] [cir_private, default, dso_local, constant]
global __const.main.dyn_a : u8i[8] = [1, 2, 3, 4, 5, 6, 7, 8] [cir_private, default, dso_local, constant]
global __const.main.partial_b : u8i[8] = [1, 2, 3, 4] [cir_private, default, dso_local, constant]
global __const.main.partial_a : u8i[8] = [1, 2, 3, 4, 9, 9, 9, 9] [cir_private, default, dso_local, constant]
global __const.main.unequal_b : u8i[4] = [1, 2, 3, 9] [cir_private, default, dso_local, constant]
global __const.main.unequal_a : u8i[4] = [1, 2, 3, 4] [cir_private, default, dso_local, constant]
global __const.main.equal_b : u8i[4] = [1, 2, 3, 4] [cir_private, default, dso_local, constant]
global __const.main.equal_a : u8i[4] = [1, 2, 3, 4] [cir_private, default, dso_local, constant]
global .str : s8i[13] = "%d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, pure, nothrow];
fn get_count() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %75 = alloca s32i, "__retval", align 4
    %76 = const 4 : s32i
    store %76, %75
    %77 = load %75 : s32i
    return %77
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[4], "equal_a", align 1
    %2 = alloca u8i[4], "equal_b", align 1
    %3 = alloca s32i, "equal_result", align 4
    %4 = alloca u8i[4], "unequal_a", align 1
    %5 = alloca u8i[4], "unequal_b", align 1
    %6 = alloca s32i, "unequal_result", align 4
    %7 = alloca u8i[8], "partial_a", align 1
    %8 = alloca u8i[8], "partial_b", align 1
    %9 = alloca s32i, "partial_result", align 4
    %10 = alloca u8i[8], "dyn_a", align 1
    %11 = alloca u8i[8], "dyn_b", align 1
    %12 = alloca s32i, "n", align 4
    %13 = alloca s32i, "dyn_result", align 4
    %14 = const 0 : s32i
    store %14, %0
    %15 = get_global @__const.main.equal_a : u8i[4]*
    copy %1, %15
    %16 = get_global @__const.main.equal_b : u8i[4]*
    copy %2, %16
    %17 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
    %18 = cast(array_to_ptrdecay) %1 : u8i*
    %19 = cast(bitcast) %18 : void*
    %20 = cast(array_to_ptrdecay) %2 : u8i*
    %21 = cast(bitcast) %20 : void*
    %22 = const 4 : u64i
    %23 = call @memcmp(%19, %21, %22) : s32i [pure]
    %24 = const 0 : s32i
    %25 = cmp eq %23, %24 : bool
    %26 = cast(bool_to_int) %25 : s32i
    store %26, %3, align 4
    %27 = get_global @__const.main.unequal_a : u8i[4]*
    copy %4, %27
    %28 = get_global @__const.main.unequal_b : u8i[4]*
    copy %5, %28
    %29 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
    %30 = cast(array_to_ptrdecay) %4 : u8i*
    %31 = cast(bitcast) %30 : void*
    %32 = cast(array_to_ptrdecay) %5 : u8i*
    %33 = cast(bitcast) %32 : void*
    %34 = const 4 : u64i
    %35 = call @memcmp(%31, %33, %34) : s32i [pure]
    %36 = const 0 : s32i
    %37 = cmp eq %35, %36 : bool
    %38 = cast(bool_to_int) %37 : s32i
    store %38, %6, align 4
    %39 = get_global @__const.main.partial_a : u8i[8]*
    copy %7, %39
    %40 = get_global @__const.main.partial_b : u8i[8]*
    copy %8, %40
    %41 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
    %42 = cast(array_to_ptrdecay) %7 : u8i*
    %43 = cast(bitcast) %42 : void*
    %44 = cast(array_to_ptrdecay) %8 : u8i*
    %45 = cast(bitcast) %44 : void*
    %46 = const 4 : u64i
    %47 = call @memcmp(%43, %45, %46) : s32i [pure]
    %48 = const 0 : s32i
    %49 = cmp eq %47, %48 : bool
    %50 = cast(bool_to_int) %49 : s32i
    store %50, %9, align 4
    %51 = get_global @__const.main.dyn_a : u8i[8]*
    copy %10, %51
    %52 = get_global @__const.main.dyn_b : u8i[8]*
    copy %11, %52
    %53 = call @get_count() : s32i [all]
    store %53, %12, align 4
    %54 = get_global @memcmp : ((void*, void*, u64i) -> s32i)*
    %55 = cast(array_to_ptrdecay) %10 : u8i*
    %56 = cast(bitcast) %55 : void*
    %57 = cast(array_to_ptrdecay) %11 : u8i*
    %58 = cast(bitcast) %57 : void*
    %59 = load %12 : s32i, align 4
    %60 = cast(integral) %59 : u64i
    %61 = call @memcmp(%56, %58, %60) : s32i [pure]
    %62 = const 0 : s32i
    %63 = cmp eq %61, %62 : bool
    %64 = cast(bool_to_int) %63 : s32i
    store %64, %13, align 4
    %65 = get_global @printf : ((s8i*, ...) -> s32i)*
    %66 = get_global @.str : s8i[13]*
    %67 = cast(array_to_ptrdecay) %66 : s8i*
    %68 = load %3 : s32i, align 4
    %69 = load %6 : s32i, align 4
    %70 = load %9 : s32i, align 4
    %71 = load %13 : s32i, align 4
    %72 = call @printf(%67, %68, %69, %70, %71) : s32i [all]
    %73 = const 0 : s32i
    store %73, %0
    %74 = load %0 : s32i
    return %74
}
